# N-Xyme_MIND

./: .coverage  .coveragerc  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AGENTSold.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  LICENSE.md  Makefile  NxSMS_README.md  README-ROSETTA.md  README.md  REDESIGN-4-AGENT-ARCHITECTURE.md  ROOT.md  SECURITY.md  STANDALONE.md  agent_identities.json  audit-recommendations.md  benchmark_results.json  bootstrap.sh  coverage.json  docker-compose.yml  env-nxyme.fish  env.fish  env.sh  frankenstein.py  gpu-train  hindsight_mcp.py  install-nx-dictate.sh  install-nx-mind.sh  integration-synthesis-plan.md  (+39 more)
.githooks/: pre-push
.trash/src-dead/security-agent/: Dockerfile  README.md  pyproject.toml  test_security_agent.py
athena/: AGENTS.md  CONTRIBUTING.md  README.md  SAFETY.md  athena.yaml  pyproject.toml  requirements.txt
athena/.agent/state/: embedding_cache.json  exchange_state.json
athena/Athena-Public.wiki/: FAQ.md  Getting-Started.md  Home.md  The-Compounding-Effect.md  Workflow-Reference.md
athena/docs/: ABOUT_ME.md  ARCHITECTURE.md  BENCHMARKS.md  BEST_PRACTICES.md  CAPABILITIES.md  CASE_STUDIES.md  CHANGELOG.md  CLI.md  ENGINEERING_DEPTH.md  FAQ.md  FEATURES.md  GETTING_STARTED.md  GRAPHRAG.md  KNOWLEDGE_GRAPH.md  MANIFESTO.md  SECURITY.md  SEMANTIC_SEARCH.md  SPEC_SHEET.md  TAG_INDEX.md  TOP_10_PROTOCOLS.md  TRILATERAL_FEEDBACK.md  USER_DRIVEN_RSI.md  USE_CASES.md  WHAT_IS_AN_AI_AGENT.md  YOUR_FIRST_AGENT.md  YOUR_FIRST_SESSION.md
athena/docs/concepts/: Grace_Protocol.md  Half_Half_Half_Rule.md  Iteration_Arbitrage.md  Meta_Game_Thesis.md  Outcome_Economy.md  Time_Compression_Thesis.md
athena/docs/marketing/: DIFFERENTIATION.md
athena/docs/protocols/: 412-dm-pairing-gate.md  418-rev9-architecture.md
athena/examples/agents/: README.md  marketing-strategist.md  risk-guardian.md  strategic-advisor.md  trading-analyst.md
athena/examples/case_studies/: CS-006-the-replacement-trap.md
athena/examples/concepts/: anti_hallucination.md
athena/examples/framework/: Athena_Profile.md  Constraints_Master.md  Core_Identity.md  DEAD_MAN_SWITCH.md  Design_DNA.md  Governance_Audit_2025.md  Output_Standards.md  System_Manifest.md  System_Principles.md
athena/examples/hooks/: README.md  pre_compact.py
athena/examples/protocols/: README.md
athena/examples/scripts/: auto_linker.py  boot.py  capture.py  create_session.py  debug_bot.py  deep_fix_links.py  deploy_v1.sh  ensure_env.sh  exec_deep_reindex.sh  generate_eev_chart.py  menu_bot.py  parallel_session.sh  pattern_recognition.py  query_codex.py  query_graphrag.py  quicksave.py  safe_boot.sh  self_optimize.py  simple_telegram_bot.py  smart_search.py  start-remote-services.sh  stop-remote-services.sh  token_budget.py  transcribe_audio.py  voice_pipeline.py  working_bot.py
athena/examples/session_logs/: README.md
athena/examples/skills/: README.md
athena/examples/templates/: SKILL_INDEX_template.md  Skill_Frontend_Patterns.md
athena/examples/workflows/: 416-agent-swarm.md  audit.md  battleplan.md  circuit.md  deploy.md  end.md  fix.md  minmax.md  notebook-portfolio.md  primer.md  start.md  ultraend.md  ultrastart.md  web-build.md
athena/scripts/: boot.py  index_local.py  launch_athena.sh  safe_boot.sh
athena/scripts/core/: index_workspace.py  quicksave.py  smart_search.py
athena/src/athena/: mcp_server.py  sessions.py
athena/wiki/: FAQ.md  Home.md  Philosophy.md  The-Compounding-Effect.md  Use-Cases.md  Workflow-Reference.md
nx-mind-desktop/src-tauri/: Cargo.toml  tauri.conf.json
nx-mind-desktop/src-tauri/src/: db.rs  gpu.rs  lib.rs  main.rs  process.rs  trainer.rs
nx_dictate/: README.md  __init__.py  __main__.py  api.py  audio_processing.py  cli.py  commands.py  config.py  config.yaml  dictate.sh  dictate_app.py  dual_pipeline.py  evdev_injection.py  history.py  hotword.py  injection.py  metrics.py  network_audio.py  noise_suppression.py  nxyme-dictate.service  nxyme-dictate.sh  pyproject.toml  realtime.py  requirements.txt  run_dictate.py  security.py  speaker_diarization.py  stats.py  text_processor.py  training.py  tts.py  ui.py  uinput_keyboard.py  ux-design-specification.md
nx_dictate/audio/: __init__.py  capture.py  processing.py
nx_dictate/cache/: model_cache.py
nx_dictate/core/: __init__.py  audio.py  engine.py  hotkey.py  injection.py  state.py
nx_dictate/daemon/: __init__.py  main.py
nx_dictate/scripts/: benchmark_dictate.py  fast_dictate.py  manage_dictate.sh  quick_dictate_test.py  show_metrics.sh  simple_dictate.py
nx_dictate/server/: main.py
nx_dictate/tests/: test_commands.py  test_dictate_app_state.py  test_metrics.py  test_text_enhancements.py  test_text_processor.py
nx_dictate/ui/: __init__.py  feedback.py  speech.py  tray.py
nx_trainer/: LICENSE  README.md  pyproject.toml  rosetta_client.py  rosetta_executor.py  rosetta_opencode.py  rosetta_registry.py  rosetta_server.py  test_0.5b.py  test_executor.py  test_extensive.py  test_final_verification.py  test_full_accuracy.py  test_json_validity.py  test_natural_language.py  test_training_format.py  train_0.5b.py
nx_trainer/docs/: BLEEDING_EDGE_TRAINER_MASTERPLAN.md  JOURNEY_COMPLETE.md  TECHNICAL_DOCUMENTATION.md
nx_trainer/examples/: quickstart.py
nx_trainer/nx_trainer/: __init__.py  adapter_registry.py  auto_tuner.py  batch_inferrer.py  bco_trainer.py  cli.py  config.py  data_generator.py  early_stopping.py  evaluator.py  loco.py  lora_plus.py  metrics_collector.py  optimizers.py  orpo_trainer.py  pro_trainer.py  real_validator.py  rrhf_trainer.py  trainer.py  validator.py  vera.py  vllm_backend.py
nx_trainer/nx_trainer/core/: __init__.py  cli.py  evaluation.py  export.py  logging_utils.py  registry.py  trainer.py
nx_trainer/tests/: test_training.py
services/nx-agents-mcp/: Cargo.toml
services/nx-agents-mcp/src/: instagram.rs  main.rs  ml_bridge.rs
src/core-infrastructure/: README.md  pyproject.toml
src/engine/: CMakeLists.txt  OPTIMIZATION_MASTER_PLAN.md
(+2553 files in other folders)
