[workspace]
resolver = "3"
members = ["services/nx-agents-mcp", "services/minilm", "ml"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"
cargo = "deny"
nursery = "allow"

[profile.release]
opt-level = 2
lto = true
