[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nx-dictate"
version = "1.0.0"
description = "N-Xyme Dictate - Voice dictation system with UI and text injection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "N-Xyme", email = "nxyme@example.com"}
]
keywords = ["dictation", "voice", "speech-to-text", "whisper", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Core dependencies
dependencies = [
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "python-dotenv>=1.0.0",
]

# Optional dependencies
[project.optional-dependencies]
ui = ["PyQt6>=6.6.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

# Console scripts
[project.scripts]
nxyme-dictate = "nx_dictate.__main__:main"
nxyme-dictate-server = "nx_dictate.server.main:main"
nxyme-dictate-ctl = "nx_dictate.cli:main"

[project.urls]
Homepage = "https://github.com/nxyme/nx-dictate"
Documentation = "https://github.com/nxyme/nx-dictate#readme"
Repository = "https://github.com/nxyme/nx-dictate"

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["nx_dictate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]