[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nx-trainer"
version = "0.2.0"
description = "Train local LLMs to translate natural language to MCP tool calls - Fastest pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "N-Xyme", email = "nxyme@example.com"}
]
keywords = [
    "machine-learning",
    "fine-tuning",
    "lora",
    "qlora",
    "mcp",
    "llm",
    "tool-calling",
    "local-llm",
    "unsloth",
    "peft",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - minimal, no version conflicts
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "peft>=0.13.0",
    "trl>=0.10.0",
    "scipy>=0.14.0",  # For LoRA compute
]

[project.optional-dependencies]
# API Server for inference
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]
# OPTIMAL: Unsloth - 2x faster, 70% less VRAM (12GB+ GPU)
unsloth = [
    "unsloth>=2026.1.0",
    "unsloth_zoo>=2026.1.0",
    "xformers>=0.0.27",
]
# Alternative: Standard PEFT/trl (works everywhere)
peft = [
    "bitsandbytes>=0.43.0",
    "qonvexdb>=0.0.0",
]
# Fallback: Ollama (simplest, but less capable)
ollama = [
    "ollama>=0.1.0",
]
# QLoRA: For <12GB VRAM
qlora = [
    "unsloth[unsloth]",
    "bitsandbytes>=0.43.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
nx-train = "nx_trainer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nx_trainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]