[tool.poetry]
name = "core-infrastructure"
version = "1.0.0"
description = "Core Infrastructure & The Catalyst Engine for N-Xyme CATALYST"
authors = ["N-Xyme <n-xyme@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
catalyst = "src.catalyst:main"
