[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.2",
    "structlog>=24.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
